[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pip_and_pip_tools"
description = "Requires compatible installations of pip and pip-tools"
authors = [{name = "Andy Kluger"}]
license = {file = "LICENSE"}
readme = "README.rst"
dependencies = ["pip<25.1", "pip-tools>=7.4.1"]
version = "7.4.1"

[project.urls]
Home = "https://github.com/andydecleyre/pip-and-pip-tools"
